# python-kpop

./: .gitignore  README.md  pyproject.toml
src/kpop/: __init__.py  core.py
tests/: test_core.py
